--- a/src/angular/package.json
+++ b/src/angular/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "@types/socket.io-client": "^1.4.32",
+    "angular-fittext": "^2.1.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
