--- a/src/angular/package.json
+++ b/src/angular/package.json
@@ -17,17 +17,19 @@
     "@angular/compiler": "~9.0.1",
     "@angular/core": "~9.0.1",
     "@angular/forms": "~9.0.1",
+    "@angular/localize": "^9.0.6",
     "@angular/material": "^9.0.0",
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@popperjs/core": "^2.1.0",
     "@types/socket.io-client": "^1.4.32",
-    "angular-fittext": "^2.1.1",
+    "angular2-websocket": "^0.9.8",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
-    "videogular": "^2.2.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
