--- a/src/angular/package.json
+++ b/src/angular/package.json
@@ -27,8 +27,11 @@
     "@types/socket.io-client": "^1.4.32",
     "angular2-websocket": "^0.9.8",
     "hammerjs": "^2.0.8",
+    "net": "^1.0.2",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
